@@ -2,8 +2,10 @@
 
 * Fixed a bug where canceling the publishing dialog wasn't respected.
 * Fixed a bug when after authentication us redirected on wrong url (site have only one language)
-* Fixed issue that the file 'cms/css/cms.base.css' could not be found when 
+* Fixed issue that the file 'cms/css/cms.base.css' could not be found when
   CachedStaticFilesStorage or similar is used for STATICFILES_STORAGE
+* Changed the signature for internal ``cms.plugin_base.CMSPluginBase`` methods ``get_child_classes``
+  and ``get_parent_classes`` to take an optional ``instance`` parameter.
 
 
 === 3.4.2 (2017-01-23) ===
